--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-thomas-pastinsky",
   "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "Dedicated to the memory of Thomas Pastinsky.",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -11,12 +11,12 @@
     "start": "ember server",
     "test": "ember try:each"
   },
-  "repository": "",
+  "repository": "https://github.com/atsjj/ember-thomas-pastinsky",
   "engines": {
     "node": ">= 0.12.0"
   },
-  "author": "",
-  "license": "MIT",
+  "author": "Steve Jabour <steve@jabour.me>",
+  "license": "ISC",
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
@@ -37,7 +37,6 @@
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
-    "ember-welcome-page": "^1.0.3",
     "loader.js": "^4.0.10"
   },
   "keywords": [
